--- a/src/Components/HomeBeforeLog/footer.css
+++ b/src/Components/HomeBeforeLog/footer.css
@@ -76,6 +76,7 @@
   border: 1px solid #CBD5E0; 
   border-radius: 4px; /* Rounded corners */
   transition: border-color 0.3s ease;
+  color: black;
 }
 
 .form-input:focus,
