--- a/src/Components/HomeAfterLog/Home.css
+++ b/src/Components/HomeAfterLog/Home.css
@@ -1,9 +1,14 @@
 .welcome {
-    text-align: center;
-  }
-  
+  text-align: center;
+}
+
 .welcome-message {
-    margin-top: 150px;
-    font-size: 35px;
-    text-align: center;
+  margin-top: 150px;
+  font-size: 35px;
+  text-align: center;
+}
+
+.HomeJobProvider {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
