--- a/src/Components/NavBeforeLog/NavBeforeLog.css
+++ b/src/Components/NavBeforeLog/NavBeforeLog.css
@@ -4,10 +4,12 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: black;
-    opacity: 0.6;
+    /* background-color: #f8f9fa; */
+    background-color: #1fc677;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    /* opacity: 0.6; */
     /* background-color: transparent; */
-    color: white;
+    color: black;
     position: fixed;
     top: 0;
     width: 100%;
@@ -41,29 +43,31 @@
     /* Cover the container without distortion */
 }
 
+/* Center navbar links */
 .navbar-links {
+    position: absolute;  /* Absolute positioning */
+    left: 50%;           /* Moves it to the center of the navbar */
+    transform: translateX(-50%);  /* Centers it perfectly */
     display: flex;
     gap: 20px;
-    flex: 1;
-    justify-content: center;
-    /* Center the links in the navbar */
-    font-size: 20px;
-}
+    font-size: 18px;
+  }
 
 .navbar-links a {
-    color: white;
+    /* color: white; */
+    color: black;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 .navbar-links a:hover {
-    color: #f0a500;
+    color: #b67e05;
     /* Change to a different color on hover */
 }
 
 .navbar-auth {
     display: flex;
     gap: 15px;
-    font-size: 20px;
+    font-size: 18px;
     padding: 5px;
 }
